# devinterp

./: .env-template  .gitignore  CONTRIBUTING.md  Makefile  README.md  devinterp.optim.rst  devinterp.rst  devinterp.slt.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
demos/: cuda_benchmark.ipynb  dlns.ipynb  effdim.ipynb  grokking.ipynb  introduction.ipynb  mnist.ipynb  normal_crossing.ipynb  resnet18.ipynb  tms.ipynb
devinterp/: checkpoints.py  config.py  data.py  evals.py  learner.py  logging.py  sgld.py  storage.py  utils.py
devinterp/mechinterp/: activations.py
devinterp/misc/: io.py
devinterp/ops/: evals.py  logging.py  storage.py  utils.py
devinterp/optim/: __init__.py  badodab.py  optimizers.py  schedulers.py  sghmc.py  sgld.py  sgnht.py  svgd.py
devinterp/slt/: ensemble.py  learning_coeff.py  metrics.py  observables.py  sampler.py  sgld.py
devinterp/viz/: __init__.py  activations.py  objectives.py  objectives_utils.py  render.py  transform.py
devinterp/zoo/: transformer.py
docs/: .buildinfo  README.md  conf.py  devinterp.html  devinterp.optim.html  devinterp.optim.rst  devinterp.rst  devinterp.slt.html  devinterp.slt.rst  devinterp.utils.html  devinterp.utils.rst  devinterp.vis_utils.html  generate_docs.py  genindex.html  index.html  index.rst  make.bat  modules.html  modules.rst  objects.inv  py-modindex.html  readme.md  search.html  searchindex.js
docs/.doctrees/: devinterp.doctree  devinterp.slt copy.doctree  devinterp.utils.doctree  devinterp.vis_utils.doctree  environment.pickle  index.doctree
docs/_modules/: index.html
docs/_sources/: devinterp.optim.rst.txt  devinterp.rst.txt  devinterp.vis_utils.rst.txt  index.rst.txt
docs/_static/: custom.js
docs/doctrees/: devinterp.doctree  devinterp.slt.doctree  environment.pickle  index.doctree
docs/html/: .buildinfo  devinterp.html  devinterp.optim.html  devinterp.slt.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: devinterp.backends.default.rst  devinterp.backends.default.slt.rst  devinterp.backends.rst  devinterp.backends.tpu.rst  devinterp.backends.tpu.slt.rst  devinterp.mechinterp.rst  devinterp.optim.rst  devinterp.rst  devinterp.slt.rst
etc/ci/: bump-package-version.sh
examples/: ED-LR-seed1.pkl  ED_dataset.pt  cuda_benchmark.ipynb  diagnostics.ipynb  dln_llc_sweep.html  dlns.ipynb  ed.ipynb  effdim.ipynb  epsilon_beta.ipynb  epsilon_beta_sweep.html  forms.ipynb  grokking.ipynb  introduction.ipynb  m=inf-dan.ipynb  mnist.ipynb  normal_crossing.ipynb  resnet18.ipynb  resnets.ipynb  sgld_calibration.ipynb  tms.ipynb
examples/zoo/: data.py  transformer.py
notebooks/: 1-sgd-vs-bayes-in-tms.ipynb  2-cf-ground-truth.ipynb  3-induction-heads.ipynb  4-vision-models.ipynb  5-simple-llms.ipynb  DLN_SGLD_trajectory_notebook.ipynb  Normal_Crossing_SGLD_trajectory_notebook.ipynb  dlns.ipynb  logs.csv
tests/optim/: sgld.py  (+5 more)
(+355 files in other folders)
