[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "devinterp"
version = "0.3.0"
description = "A library for doing research on developmental interpretability"
# license = "LICENSE"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest==7.4.3"]
tpu = ["torch-xla>=2.0.1"]

[project.urls]
"Homepage" = "https://github.com/timaeus-research/devinterp"
"Bug Tracker" = "https://github.com/timaeus-research/devinterp/issues"
